# alumbreras.github.io.src

./: .gitignore  Gemfile  README.md  _config.yml  index.html  index.md  posts.md  publications.md  publications.mkd  site.hs  stack-project.cabal
R_scripts/: assemblea_cup.r
Rmarkdowns/: 2015-04-26-preferences_MH.Rmd  assemblea_cup_post.Rmd  rejection_sampling.r
_includes/: head.html  navbar.html  news.html  publications.html  scripts.html
_layouts/: bib.html  bibtex.html  default.html  post.html  publications.html  section.html
_posts/: 2013-11-02-la-cia-catalana.markdown  2013-11-08-revoluciones-cientificas.markdown  2014-02-25-The-Chinese-Restaurant-Process.markdown  2015-04-26-Pairwise-preference_learning-with-Metropolis.markdown  2015-12-28-10000-Asambleas-de-la-CUP.markdown  2016-10-10-PCA .markdown
css/: custom.css  default.css
drafts/: 2015-01-14-Analyzing_podemos_forum.markdown  2015-01-14-Podemitas_motifs.markdown  2015-12-31-Que_es_probabilidad.markdown
files/CV src/: alumbreras_cv.aux  alumbreras_cv.blg  alumbreras_cv.dvi  alumbreras_cv.out  alumbreras_cv.tex  alumbreras_cv_CNRS.aux  alumbreras_cv_CNRS.out  alumbreras_cv_CNRS.tex  alumbreras_cv_pro.aux  alumbreras_cv_pro.out  alumbreras_cv_pro.tex  (+24 more)
posts/: 2013-11-02-la-cia-catalana.markdown  2013-11-08-revoluciones-cientificas.markdown  2014-02-25-The-Chinese-Restaurant-Process.markdown  2015-04-26-Pairwise-preference_learning-with-Metropolis.markdown  2015-12-28-10000-Asambleas-de-la-CUP.markdown  2016-10-10-PCA .markdown
templates/: default-post.html  default.html  post.html  posts.html
