name:                stack-project
version:             0.1.0.0
synopsis:            Source code of www.albertolumbreras.net (built with stack)
description:         Please see README.md
homepage:            https://github.com/alumbreras/alumbreras.github.io.src
license:             BSD3
license-file:        LICENSE
author:              Alberto Lumbreras
maintainer:          alberto.lumbreras@gmail.com
copyright:           2015 Alberto Lumbreras
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable stack-project

  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base,
                       hakyll,
                       pandoc,
                       containers
